--- a/login.html
+++ b/login.html
@@ -12,6 +12,8 @@
 <body>
   <main id="main-holder">
     <h1 id="login-header">Login</h1>
+    <h3>username:= admin</h3>
+    <h3>password:= admin</h3>
     
     <div id="login-error-msg-holder">
       <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
