--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="myimg.jpg" alt="RT Security.com">
+            <img src="91689622-cyber-security-logo-concept.webp" alt="RT Security.com">
         </div>
 
         <ul>
@@ -24,9 +24,10 @@
             <li class="item"><a href="#services">Services</a></li>
             <li class="item"><a href="#about-section">About Us</a></li>
             <li class="item"><a href="#contact ">Contact Us</a></li>
+            <li class="item"><a href="login.html">Login</a></li>
         </ul>
     </nav>
-    <section id="home">
+    <section id="home"> 
         <h1 class="h-primary">Welcome to RT Security</h1>
         <p>Get The Best Online Security & Protection</p>
     </section>
@@ -74,8 +75,6 @@
                     injections, privilege escalation, series of vulnerabilities leading to account takeover, LFI, XSS,
                     OWASP Top 10, etc… Secured over 10+ company.
             </div>
-        </div>
-    </section>
     <section id="contact">
         <h1 class="h-primary center">Contact Us</h1>
         <div id="contact-box">
